fix carousel controls to sides of screen and carousel images on mobile to top

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,7 +56,7 @@ img {
 @media (max-width: 598px) {
   #content-wrap {
     display: flex;
-    align-items: center;
+    // align-items: center;
   }
   .content {
     padding-top: 1em;
